fixed habit container overflowing

--- a/public/css/habits.css
+++ b/public/css/habits.css
@@ -343,7 +343,6 @@
     border: 1px solid #E5E7EB;
     box-shadow: 0px 2px 20px -2px rgba(0, 0, 0, 0.05);
     border-radius: 8px;
-    height: 148px;
     margin-bottom: 10px;
     width: 100%;
  }
@@ -374,6 +373,7 @@
     font-weight: 700;
     font-size: 24px;
     line-height: 125%;
+    width: calc(100% - 129px);
  }
 
  .days-style {
